memperbaiki penambahan respose penting lainnya
